--- a/scss/layout/_footer-form.scss
+++ b/scss/layout/_footer-form.scss
@@ -1,10 +1,31 @@
 .footer-form{
+@media screen and (max-width: $desktop) {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+    
+}
 
-    .form-list{
-       display: flex; 
+    
+         }
+
+  .form-list{
+    display: flex;
     
   }
+     
+      
+      
+    
+  
     .form-email{
+      @media screen and (max-width: $desktop) {
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          flex-wrap: wrap;
+      }
       width: 358px;
   height: 50px;
   padding-left: 16px;
@@ -52,4 +73,3 @@
     margin-left: 10px;
   }
   
-  }
