--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,101 +1,100 @@
 @media screen and (min-width: $desktop)  {
   
+.header {
+  border-bottom: 1px solid #ececec;
+display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+ 
+
+  &__link {
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--header-color);
+    text-decoration: none;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    transition: color $time $time-function;
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+
+  }
+
+  &__contacts-link {
+    color: $text-color;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: flex;
+    transition: color $time $time-function;
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+
+  }
+
+  &__contacts-link-icon {
+    fill: currentColor;
+    margin-right: 10px;
+  }
+
+  &__logo {
+
+    display: flex;
+    margin-right: 93px;
+  }
+
+  &__nav {
+    display: flex;
+    align-items: center;
+  }
+
+  &__nav-link {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    & .link+.link {
+      margin-left: 50px;
+    }
+  }
+
+  &__contacts {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__contacts .link+.link {
+    margin-left: 50px;
+  }
+
 }
-// .header {
-//   border-bottom: 1px solid #ececec;
-// display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   position: relative;
-// }
-  // &__inner {
-   
-  // }
+}
 
-  // &__link {
-  //   display: block;
-  //   font-size: 14px;
-  //   font-weight: 500;
-  //   line-height: 1.14;
-  //   letter-spacing: 0.02em;
-  //   text-align: left;
-  //   color: var(--header-color);
-  //   text-decoration: none;
-  //   padding-top: 32px;
-  //   padding-bottom: 32px;
-  //   transition: color $time $time-function;
-
-  //   &:hover,
-  //   &:focus {
-  //     color: $accent-color;
-  //   }
-
-  // }
-
-//   &__contacts-link {
-//     color: $text-color;
-//     text-decoration: none;
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     letter-spacing: 0.02em;
-//     padding-top: 32px;
-//     padding-bottom: 32px;
-//     display: flex;
-//     transition: color $time $time-function;
-
-//     &:hover,
-//     &:focus {
-//       color: $accent-color;
-//     }
-
-//   }
-
-
-
-//   &__contacts-link-icon {
-//     fill: currentColor;
-//     margin-right: 10px;
-//   }
-
-//   &__logo {
-
-//     display: flex;
-//     margin-right: 93px;
-
-
-//   }
-
-//   &__nav {
-//     display: flex;
-//     align-items: center;
-//   }
-
-//   &__nav-link {
-//     display: flex;
-//     justify-content: center;
-//     flex-wrap: wrap;
-
-//     & .link+.link {
-//       margin-left: 50px;
-//     }
-//   }
-
-//   &__contacts {
-//     display: flex;
-//     flex-wrap: wrap;
-//   }
-
-//   &__contacts .link+.link {
-//     margin-left: 50px;
-//   }
-
-// }
+// mobile-menu
 @media screen and (max-width: $pretablet ) {
   
 
 .menu-container{
-  
+  @media screen and(max-width:479px) {
+      padding: 34px 30px;
+    }
+        @media screen and (max-width: 767px) {
+  z-index: 900;
   background-color: $wite-color;
 
   
@@ -104,13 +103,24 @@ position: absolute;
 top:0;
 left: 0;
 width: 100%;
-height: 796px;
+// height: 796px;
 padding: 48px 40px;
+        }
+               
+                &.is-open {
+                  display: block;
+                }
   
 }
-.menu-toggle-close{
+.header__button{
 
-
+  @media screen and (min-width: $tablet) {
+      display: none;
+    }
+display: inline-flex;
+  margin: 0;
+  padding: 0;
+z-index: 990;
   position: absolute;
   top: 10px;
   right: 15px;
@@ -119,14 +129,26 @@ padding: 48px 40px;
   cursor: pointer;
     transition: fill $time $time-function;
 
-    &:hover,
-      &:focus {
+    &:hover .icon-menu-close,
+      &:hover .icon-menu-open {
         fill: $accent-color;
 
-  @media screen and (min-width: $tablet) {
-      display: none;
-    }
 }}
+.icon-menu-close{
+z-index: 999;
+}
+.header__button .icon-menu-close {
+  display: none;
+  
+}
+
+.header__button.is-open .icon-menu-close {
+  display: block;
+}
+
+.header__button.is-open .icon-menu-open {
+  display: none;
+}
 
 .header__link{
 font-size: 40px;
@@ -148,7 +170,7 @@ margin-top: 32px;
 .header__tel{
 font-size: 34px;
 line-height: 1.18;
-/* identical to box height */
+
 
 letter-spacing: 0.02em;
 
