--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -4,8 +4,13 @@
     top: 50%;
     left: 50%;
     
-    min-width: 528px;
-  min-height: 581px;
+    width: 450px;
+    max-height: 609px;
+    @media screen and (min-width: $desktop) {
+        max-height: 581px;
+        width: 528px;
+    }
+  
   padding: 40px;
   background-color: $wite-color;
   transform: translate(-50%, -50%) scale(1);
