--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -10,27 +10,28 @@
 }
 &__logo {
   margin-bottom: 20px;
+  
+    text-align: center;
+  
+ 
 }
 &__list{
   display: flex;
  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  gap: 60px;
+
 
  
  @media screen and (min-width: $tablet) {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: baseline;
-    justify-content: space-between;
+    // justify-content: space-between;
  }
 
-  //  @media screen and (min-width: $desktop) {
-   
-  //     align-items: baseline;
-  //     justify-content: space-between;
   
-  
-  // }
 
     
   &__li + &__li{
@@ -44,7 +45,8 @@
 
 
 &__address {
-  
+  display: flex;
+  align-items: center;
   margin-bottom: 10px;
 }
 
