--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @import'./layout/header';
 @import'./layout/hero-section';
 @import'./layout/modal';
+@import'./layout/menu-mobile';
 @import'./layout/benefits-section';
 @import'./layout/work-section';
 @import'./layout/team-section';
