--- a/css/main.css
+++ b/css/main.css
@@ -178,9 +178,30 @@ body {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 767px) {
+  .header {
+    height: 60px;
+  }
+  .header__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 17px;
+  }
+  .header .header__nav, .header .header__contacts {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header__inner {
+    gap: 64px;
+  }
+}
+@media screen and (min-width: 768px) {
   .header {
     border-bottom: 1px solid #ececec;
+  }
+  .header__inner {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -190,7 +211,6 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    position: relative;
   }
   .header__link {
     display: block;
@@ -201,8 +221,6 @@ body {
     text-align: left;
     color: var(--header-color);
     text-decoration: none;
-    padding-top: 32px;
-    padding-bottom: 32px;
     -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -216,8 +234,8 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -252,8 +270,6 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
   }
   .header__nav-link .link + .link {
     margin-left: 50px;
@@ -265,150 +281,14 @@ body {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
-  .header__contacts .link + .link {
-    margin-left: 50px;
-  }
 }
-@media screen and (max-width: 767px) and (max-width: 479px) {
-  .menu-container {
-    padding: 34px 30px;
+@media screen and (min-width: 1200px) {
+  .header__contacts-link, .header__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
-}
-@media screen and (max-width: 767px) and (max-width: 767px) {
-  .menu-container {
-    z-index: 900;
-    background-color: #ffffff;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 48px 40px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .menu-container.is-open {
-    display: block;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__button {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    margin: 0;
-    padding: 0;
-    z-index: 990;
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    border: none;
-    background-color: #ffffff;
-    cursor: pointer;
-    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-@media screen and (max-width: 767px) and (min-width: 768px) {
-  .header__button {
-    display: none;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__button:hover .icon-menu-close, .header__button:hover .icon-menu-open {
-    fill: #2196f3;
-  }
-}
-@media screen and (max-width: 767px) {
-  .icon-menu-close {
-    z-index: 999;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__button .icon-menu-close {
-    display: none;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__button.is-open .icon-menu-close {
-    display: block;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__button.is-open .icon-menu-open {
-    display: none;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__link {
-    font-size: 40px;
-    line-height: 47px;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #212121;
-    text-decoration: none;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__nav-link {
-    margin-bottom: 287px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .link + .link {
-    margin-top: 32px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__tel {
-    font-size: 34px;
-    line-height: 1.18;
-    letter-spacing: 0.02em;
-    color: #2196F3;
-    text-decoration: none;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__mail {
-    font-size: 24px;
-    line-height: 1.16;
-    letter-spacing: 0.02em;
-    color: #757575;
-    text-decoration: none;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__social-link {
-    font-size: 18px;
-    line-height: 1.22;
-    letter-spacing: 0.02em;
-    color: #2196F3;
-    text-decoration: none;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__social-item + .header__social-item {
-    margin-left: 10px;
-  }
-  .header__social-item + .header__social-item .header__social-link::before {
-    content: "";
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
-    width: 22px;
-    margin-right: 10px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .header__social-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin-top: 64px;
-  }
-}
-@media screen and (max-width: 767px) and (max-width: 767px) {
-  .header__contacts-link-icon {
-    display: none;
+  .header__contacts {
+    gap: 30px;
   }
 }
 .hero {
@@ -499,9 +379,10 @@ body {
 
 .modal {
   position: absolute;
+  overflow-y: auto;
   top: 50%;
   left: 50%;
-  width: 450px;
+  max-width: 450px;
   max-height: 609px;
   padding: 40px;
   background-color: #ffffff;
@@ -511,6 +392,15 @@ body {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .modal {
+    top: 30%;
+    left: 27%;
+    -webkit-transform: translate(-50%, -50%) scale(1.1);
+            transform: translate(-50%, -50%) scale(1.1);
+    z-index: 200;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
@@ -548,6 +438,150 @@ body {
   fill: #2196f3;
 }
 
+@media screen and (max-width: 767px) {
+  .menu__inner {
+    height: 60px;
+  }
+  .menu__nav {
+    margin-bottom: 306px;
+  }
+  .menu-container {
+    padding: 34px 30px;
+    z-index: 100;
+    background-color: #ffffff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 48px 40px;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: -webkit-transform 500ms;
+    transition: -webkit-transform 500ms;
+    transition: transform 500ms;
+    transition: transform 500ms, -webkit-transform 500ms;
+  }
+  .menu-container.is-open {
+    display: block;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  .menu__button {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    z-index: 190;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    border: none;
+    background-color: #ffffff;
+    cursor: pointer;
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu__button:hover .icon-menu-close, .menu__button:hover .icon-menu-open {
+    fill: #2196f3;
+  }
+  .icon-menu-close {
+    z-index: 199;
+  }
+  .menu__button .icon-menu-close {
+    display: none;
+  }
+  .menu__button.is-open .icon-menu-close {
+    display: block;
+  }
+  .menu__button.is-open .icon-menu-open {
+    display: none;
+  }
+  .menu__link {
+    font-size: 40px;
+    line-height: 1, 175;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #212121;
+    text-decoration: none;
+  }
+  .menu__nav-link {
+    margin-bottom: 287px;
+  }
+  .link + .link {
+    margin-top: 32px;
+  }
+  .menu__tel {
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+    text-decoration: none;
+  }
+  .menu__mail {
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #757575;
+    text-decoration: none;
+  }
+  .menu__social-link {
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+    text-decoration: none;
+  }
+  .menu__social-item + .menu__social-item {
+    margin-left: 10px;
+  }
+  .menu__social-item + .menu__social-item .menu__social-link::before {
+    content: "";
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    width: 22px;
+    margin-right: 10px;
+  }
+  .menu__social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 64px;
+  }
+}
+@media screen and (max-width: 767px) and (min-width: 768px) {
+  .menu__social-list {
+    display: none;
+  }
+}
+@media screen and (max-width: 767px) and (max-width: 767px) {
+  .menu__contacts-link-icon {
+    display: none;
+  }
+}
+@media screen and (max-width: 767px) and (min-width: 768px) {
+  .menu__social-list {
+    display: none;
+  }
+}
+@media screen and (max-width: 767px) and (min-width: 768px) {
+  .menu__button {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu__social-list,
+.menu__button {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
+  }
+}
 @media screen and (min-width: 768px) {
   .benefits {
     display: -webkit-box;
@@ -802,15 +836,13 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin: -15px;
+  gap: 30px;
 }
 @media screen and (max-width: 1199px) {
   .client__list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
-}
-.client__li {
-  margin: 15px;
 }
 @media screen and (min-width: 767px) {
   .client__li {
@@ -834,6 +866,7 @@ body {
 }
 .footer__logo {
   margin-bottom: 20px;
+  text-align: center;
 }
 .footer__list {
   display: -webkit-box;
@@ -846,6 +879,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 60px;
 }
 @media screen and (min-width: 768px) {
   .footer__list {
@@ -858,9 +895,6 @@ body {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
   }
 }
 @media screen and (max-width: 768px) {
@@ -874,6 +908,12 @@ body {
   }
 }
 .footer__list__address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 10px;
 }
 
@@ -1002,6 +1042,8 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
     font-size: 14px;
     line-height: 1.71;
   }
@@ -1049,20 +1091,24 @@ body {
   cursor: pointer;
 }
 
-@media screen and (max-width: 1200px) {
+.footer-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 20px;
+}
+@media screen and (min-widht: 768px) and (max-width: 1200px) {
   .footer-form {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    margin-left: 157px;
   }
 }
 
@@ -1070,6 +1116,14 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
 }
 
 .form-email {
@@ -1086,7 +1140,7 @@ body {
   font-size: 16px;
   letter-spacing: 0.03em;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-widht: 768px) and (max-width: 1200px) {
   .form-email {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1100,6 +1154,7 @@ body {
             flex-direction: column;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    width: 450px;
   }
 }
 
@@ -1141,7 +1196,6 @@ body {
 .form-button {
   font-size: 16px;
   line-height: 1.88;
-  margin-left: 12px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1208,6 +1262,14 @@ body {
 }
 
 .address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
   font-size: 14px;
   line-height: 1.17;
   text-decoration: none;
@@ -1216,6 +1278,11 @@ body {
   font-style: normal;
   letter-spacing: 0.03em;
   padding-left: 0;
+}
+@media screen and (min-widht: 1200px) {
+  .address__li {
+    text-align: left;
+  }
 }
 .address__li:not(:last-child) {
   margin-bottom: 10px;
