--- a/scss/layout/_footer-form.scss
+++ b/scss/layout/_footer-form.scss
@@ -1,18 +1,21 @@
 .footer-form{
-@media screen and (max-width: $desktop) {
+
   display: flex;
   justify-content: center;
   flex-direction: column;
   flex-wrap: wrap;
-    
-}
-
+  gap: 20px;
+    @media screen and (min-widht: $tablet) and (max-width: $desktop) {
+ margin-left: 157px;
+    }
     
          }
 
   .form-list{
     display: flex;
-    
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
   }
      
       
@@ -20,11 +23,12 @@
     
   
     .form-email{
-      @media screen and (max-width: $desktop) {
+      @media screen and (min-widht:$tablet) and (max-width: $desktop) {
           display: flex;
           justify-content: center;
           flex-direction: column;
           flex-wrap: wrap;
+          width: 450px;
       }
       width: 358px;
   height: 50px;
@@ -50,7 +54,7 @@
       
     font-size: 16px;
     line-height: 1.88;
-    margin-left: 12px;
+    // margin-left: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
