--- a/scss/layout/_forms.scss
+++ b/scss/layout/_forms.scss
@@ -118,7 +118,9 @@
         display: flex;
           align-items: center;
           justify-content: center;
-      font-size: 14px;
+      flex-shrink: 0;
+          font-size: 14px;
+
         line-height: 1.71;
       }
     }
