--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,218 +1,130 @@
-@media screen and (min-width: $desktop)  {
-  
-.header {
-  border-bottom: 1px solid #ececec;
-display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
- 
 
-  &__link {
-    display: block;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: var(--header-color);
-    text-decoration: none;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    transition: color $time $time-function;
+/// header-tablet
 
-    &:hover,
-    &:focus {
-      color: $accent-color;
+
+
+
+
+  @media screen and (max-width: $pretablet){
+    .header {
+    height: 60px;
+    &__logo {
+    
+        display: flex;
+margin-top: 17px;
+
+        // margin-right: 93px;
     }
-
-  }
-
-  &__contacts-link {
-    color: $text-color;
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    display: flex;
-    transition: color $time $time-function;
-
-    &:hover,
-    &:focus {
-      color: $accent-color;
-    }
-
-  }
-
-  &__contacts-link-icon {
-    fill: currentColor;
-    margin-right: 10px;
-  }
-
-  &__logo {
-
-    display: flex;
-    margin-right: 93px;
-  }
-
-  &__nav {
-    display: flex;
-    align-items: center;
-  }
-
-  &__nav-link {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-
-    & .link+.link {
-      margin-left: 50px;
-    }
-  }
-
-  &__contacts {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  &__contacts .link+.link {
-    margin-left: 50px;
-  }
-
-}
-}
-
-// mobile-menu
-@media screen and (max-width: $pretablet ) {
-  
-
-.menu-container{
-  @media screen and(max-width:479px) {
-      padding: 34px 30px;
-    }
-        @media screen and (max-width: 767px) {
-  z-index: 900;
-  background-color: $wite-color;
-
-  
-   
-position: absolute;
-top:0;
-left: 0;
-width: 100%;
-// height: 796px;
-padding: 48px 40px;
-        }
-               
-                &.is-open {
-                  display: block;
-                }
-  
-}
-.header__button{
-
-  @media screen and (min-width: $tablet) {
+        .header__nav, .header__contacts{
       display: none;
     }
-display: inline-flex;
-  margin: 0;
-  padding: 0;
-z-index: 990;
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  border: none;
-  background-color: $wite-color;
-  cursor: pointer;
-    transition: fill $time $time-function;
-
-    &:hover .icon-menu-close,
-      &:hover .icon-menu-open {
-        fill: $accent-color;
-
-}}
-.icon-menu-close{
-z-index: 999;
-}
-.header__button .icon-menu-close {
-  display: none;
-  
-}
-
-.header__button.is-open .icon-menu-close {
-  display: block;
-}
-
-.header__button.is-open .icon-menu-open {
-  display: none;
-}
-
-.header__link{
-font-size: 40px;
-line-height: 47px;
-text-align: center;
-letter-spacing: 0.02em;
-
-color: #212121;
-text-decoration: none;
-
-}
-
-.header__nav-link{
-  margin-bottom: 287px;
-}
-.link +.link {
-margin-top: 32px;
-}
-.header__tel{
-font-size: 34px;
-line-height: 1.18;
-
-
-letter-spacing: 0.02em;
-
-color: #2196F3;
-text-decoration: none;
-}
-.header__mail{
-  font-size: 24px;
-    line-height: 1.16;
-    letter-spacing: 0.02em;
-  
-    color: #757575;
-    text-decoration: none;
-}
-.header__social-link
-{
-  font-size: 18px;
-    line-height: 1.22;
-    letter-spacing: 0.02em;
-  
-    color: #2196F3;
-    text-decoration: none;
-
-}
-.header__social-item +.header__social-item{
-margin-left: 10px;
-
-.header__social-link::before{
-  content:'';
-  border: 1px solid rgba(33, 33, 33, 0.2);
-    transform: rotate(90deg);
-    width: 22px;
-    margin-right: 10px;
-}
-}
-.header__social-list{
-  display: flex;
-  margin-top: 64px;
-}
-.header__contacts-link-icon{
-  @media screen and (max-width: $pretablet){
-    display: none;
+    }
   }
-}
-}
+     @media screen  and (min-width: $tablet) and (max-width: $predesktop){
+      .header__inner{
+        gap: 64px;
+      }
+     }
+
+    @media screen and (min-width: $tablet){
+    .header {
+        border-bottom: 1px solid #ececec;
+    
+    
+        &__inner {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+    
+        &__link {
+          display: block;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 1.14;
+          letter-spacing: 0.02em;
+          text-align: left;
+          color: var(--header-color);
+          text-decoration: none;
+          
+          transition: color $time $time-function;
+    
+          &:hover,
+          &:focus {
+            color: $accent-color;
+          }
+    
+        }
+    
+        &__contacts-link {
+          color: $text-color;
+          text-decoration: none;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 1.14;
+          letter-spacing: 0.02em;
+          padding-top: 5px;
+          padding-bottom: 5px;
+          display: flex;
+          transition: color $time $time-function;
+    
+          &:hover,
+          &:focus {
+            color: $accent-color;
+          }
+    
+        }
+    
+    
+    
+        &__contacts-link-icon {
+          fill: currentColor;
+          margin-right: 10px;
+        }
+    
+        &__logo {
+    
+          display: flex;
+          margin-right: 93px;
+    
+    
+        }
+    
+        &__nav {
+          display: flex;
+          align-items: center;
+        }
+    
+        &__nav-link {
+          display: flex;
+          justify-content: center;
+        
+    
+          & .link+.link {
+            margin-left: 50px;
+          }
+        }
+    
+        &__contacts {
+          display: flex;
+          flex-wrap: wrap;
+         
+        }
+    
+                // &__contacts .link+.link {
+                //   margin-left: 50px;
+                // }
+    
+      }
+
+  }
+  @media screen and (min-width: 1200px) {
+    .header__contacts-link, .header__link {
+padding-top: 32px;
+  padding-bottom: 32px;
+    }
+.header__contacts {
+      gap: 30px;
+    }
+    }
+  
