--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -1,10 +1,18 @@
 .modal{
-    position: absolute;
+  @media screen and (max-width: $pretablet){
+  top: 30%;
+  left: 27%;
+  transform: translate(-50%, -50%) scale(1.1);
+  z-index: 200;
+  }
+    
   
+    position: absolute;
+     overflow-y: auto;
     top: 50%;
     left: 50%;
     
-    width: 450px;
+    max-width: 450px;
     max-height: 609px;
     @media screen and (min-width: $desktop) {
         max-height: 581px;
