--- a/css/main.css
+++ b/css/main.css
@@ -181,20 +181,27 @@ body {
 @media screen and (max-width: 767px) {
   .header {
     height: 60px;
+    border-bottom: 1px solid #ececec;
   }
   .header__logo {
+    padding: 12px 0;
+  }
+  .header__nav, .header__contacts {
+    display: none;
+  }
+  .header__inner {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-top: 17px;
-  }
-  .header .header__nav, .header .header__contacts {
-    display: none;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .header__inner {
     gap: 64px;
+  }
+  .header__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -219,7 +226,7 @@ body {
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-align: left;
-    color: var(--header-color);
+    color: #212121;
     text-decoration: none;
     -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -253,7 +260,6 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-right: 93px;
   }
   .header__nav {
     display: -webkit-box;
@@ -288,7 +294,7 @@ body {
     padding-bottom: 32px;
   }
   .header__contacts {
-    gap: 30px;
+    gap: 15px;
   }
 }
 .hero {
@@ -298,16 +304,16 @@ body {
   padding-bottom: 118px;
   text-align: center;
   background: #2f303a;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-480x1.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-480x1.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bakcground/bakcground-hero-480x1.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bakcground/bakcground-hero-480x1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-480x2.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-480x2.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bakcground/bakcground-hero-480x2.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bakcground/bakcground-hero-480x2.jpg");
   }
 }
 .hero__title {
@@ -351,14 +357,14 @@ body {
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-768x1.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-768x1.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bakcground/bakcground-hero-768x1.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bakcground/bakcground-hero-768x1.jpg");
   }
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-768x2.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-768x2.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bakcground/bakcground-hero-768x2.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bakcground/bakcground-hero-768x2.jpg");
   }
 }
 @media screen and (min-width: 1200px) {
@@ -366,24 +372,25 @@ body {
     padding-top: 200px;
     padding-bottom: 200px;
     max-width: 1600px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bakcground/bakcground-hero.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bakcground/bakcground-hero.jpg");
   }
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-1600x2.jpg");
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-1600x2.jpg");
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bakcground/bakcground-hero-1600x2.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bakcground/bakcground-hero-1600x2.jpg");
   }
 }
 
 .modal {
+  z-index: 200;
   position: absolute;
   overflow-y: auto;
   top: 50%;
   left: 50%;
-  max-width: 450px;
-  max-height: 609px;
+  width: 450px;
+  height: 609px;
   padding: 40px;
   background-color: #ffffff;
   -webkit-transform: translate(-50%, -50%) scale(1);
@@ -393,19 +400,16 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 479px) {
   .modal {
-    top: 30%;
-    left: 27%;
-    -webkit-transform: translate(-50%, -50%) scale(1.1);
-            transform: translate(-50%, -50%) scale(1.1);
-    z-index: 200;
+    padding: 15px;
+    width: calc(100% - 20px);
   }
 }
 @media screen and (min-width: 1200px) {
   .modal {
-    max-height: 581px;
-    width: 528px;
+    min-height: 581px;
+    min-width: 528px;
   }
 }
 .modal .backdrop.is-hidden .modal {
@@ -439,9 +443,6 @@ body {
 }
 
 @media screen and (max-width: 767px) {
-  .menu__inner {
-    height: 60px;
-  }
   .menu__nav {
     margin-bottom: 306px;
   }
@@ -499,6 +500,7 @@ body {
     display: none;
   }
   .menu__link {
+    font-weight: 500;
     font-size: 40px;
     line-height: 1, 175;
     text-align: center;
@@ -519,6 +521,13 @@ body {
     color: #2196F3;
     text-decoration: none;
   }
+}
+@media screen and (max-width: 767px) and (max-width: 380px) {
+  .menu__tel {
+    font-size: 24px;
+  }
+}
+@media screen and (max-width: 767px) {
   .menu__mail {
     font-size: 24px;
     line-height: 1.16;
@@ -526,6 +535,8 @@ body {
     color: #757575;
     text-decoration: none;
   }
+}
+@media screen and (max-width: 767px) {
   .menu__social-link {
     font-size: 18px;
     line-height: 1.22;
@@ -533,6 +544,8 @@ body {
     color: #2196F3;
     text-decoration: none;
   }
+}
+@media screen and (max-width: 767px) {
   .menu__social-item + .menu__social-item {
     margin-left: 10px;
   }
@@ -544,6 +557,8 @@ body {
     width: 22px;
     margin-right: 10px;
   }
+}
+@media screen and (max-width: 767px) {
   .menu__social-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -805,6 +820,10 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.client__title {
+  margin-top: 0;
+  margin-bottom: 50px;
+}
 .client__icon {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -816,7 +835,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   fill: #afb1b8;
-  width: 170px;
+  max-width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -835,7 +854,6 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: -15px;
   gap: 30px;
 }
 @media screen and (max-width: 1199px) {
@@ -844,7 +862,7 @@ body {
         flex-wrap: wrap;
   }
 }
-@media screen and (min-width: 767px) {
+@media screen and (max-width: 767px) {
   .client__li {
     width: calc((100% - 60px) / 2);
   }
@@ -1116,14 +1134,21 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  gap: 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 20px;
+}
+@media screen and (max-width: 1199px) {
+  .form-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .form-email {
@@ -1140,7 +1165,7 @@ body {
   font-size: 16px;
   letter-spacing: 0.03em;
 }
-@media screen and (min-widht: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1200px) {
   .form-email {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1154,7 +1179,23 @@ body {
             flex-direction: column;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    max-width: 450px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .form-email {
+    width: 220px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .form-email {
     width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form-email {
+    margin-bottom: 0;
+    width: 358px;
   }
 }
 
@@ -1211,7 +1252,7 @@ body {
   color: #ffffff;
   background-color: #2196f3;
   padding: 10px 29px;
-  min-width: 200px;
+  width: 200px;
   height: 50px;
   cursor: pointer;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1320,6 +1361,10 @@ body {
       flex-wrap: wrap;
   gap: 30px;
 }
+.portfolio-project__li {
+  border: 1px solid #eeeeee;
+  width: 450px;
+}
 @media screen and (min-width: 768px) {
   .portfolio-project__li {
     -ms-flex-preferred-size: calc((100% - 30px) / 2);
@@ -1396,7 +1441,6 @@ body {
 .portfolio-card {
   display: block;
   text-decoration: none;
-  border: 1px solid #eeeeee;
   background: #ffffff;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1437,6 +1481,11 @@ body {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-card__text {
+    font-size: 17.5px;
+  }
 }
 .portfolio-card:hover, .portfolio-card:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
