--- a/scss/layout/_footer-form.scss
+++ b/scss/layout/_footer-form.scss
@@ -13,22 +13,25 @@
 
   .form-list{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-  }
-     
-      
-      
+   
     
+    gap: 20px;
+    @media screen and (max-width: $predesktop) {
+      flex-direction: column;
+        align-items: center;
+    }
+    justify-content: center;
+  }
   
     .form-email{
-      @media screen and (min-widht:$tablet) and (max-width: $desktop) {
+
+
+      @media screen and (min-width:$tablet) and (max-width: $desktop) {
           display: flex;
           justify-content: center;
           flex-direction: column;
           flex-wrap: wrap;
-          width: 450px;
+         max-width: 450px;
       }
       width: 358px;
   height: 50px;
@@ -41,6 +44,18 @@
   line-height: 1.88;
   font-size: 16px;
   letter-spacing: 0.03em;
+    @media screen and (max-width: 479px) {
+      width: 220px;
+    }
+  
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+      width: 358px;
+    }
     }
    .form-email input::placeholder {
   margin-left: 16px; 
@@ -65,7 +80,7 @@
     background-color: $accent-color;
     padding: 10px 29px;
     
-    min-width: 200px;
+    width: 200px;
     height: 50px;
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
