--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -1,10 +1,11 @@
 .modal{
-  @media screen and (max-width: $pretablet){
-  top: 30%;
-  left: 27%;
-  transform: translate(-50%, -50%) scale(1.1);
   z-index: 200;
-  }
+  // @media screen and (max-width: $pretablet){
+  // top: 30%;
+  // left: 27%;
+  // transform: translate(-50%, -50%) scale(1.1);
+ 
+  // }
     
   
     position: absolute;
@@ -12,12 +13,17 @@
     top: 50%;
     left: 50%;
     
-    max-width: 450px;
-    max-height: 609px;
+    width: 450px;
+    height: 609px;
+         @media screen and (max-width: 479px) {
+           padding: 15px;
+           width: calc(100% - 20px);
+         }
     @media screen and (min-width: $desktop) {
-        max-height: 581px;
-        width: 528px;
+        min-height: 581px;
+       min-width: 528px;
     }
+       
   
   padding: 40px;
   background-color: $wite-color;
