--- a/scss/layout/_portfolio-section.scss
+++ b/scss/layout/_portfolio-section.scss
@@ -11,7 +11,8 @@
             }
 
              &__li {
-      
+        border: 1px solid #eeeeee;
+        width: 450px;
       
         @media screen and (min-width: $tablet) {
           
