--- a/scss/layout/_menu-mobile.scss
+++ b/scss/layout/_menu-mobile.scss
@@ -23,6 +23,7 @@
         padding: 48px 40px;
         transform: translateX(100%);
         transition: transform 500ms;
+        display: none;
 
 
         &.is-open {
