--- a/scss/layout/_footer-form.scss
+++ b/scss/layout/_footer-form.scss
@@ -5,9 +5,9 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 20px;
-    @media screen and (min-widht: $tablet) and (max-width: $desktop) {
- margin-left: 157px;
-    }
+//     @media screen and (min-widht: $tablet) and (max-width: $desktop) {
+//  margin-left: 157px;
+    // }
     
          }
 
