--- a/scss/layout/_address.scss
+++ b/scss/layout/_address.scss
@@ -3,7 +3,7 @@
   
   display: flex;
   flex-direction: column;
-    text-align: center;
+    
     
     font-size: 14px;
   line-height: 1.17;
@@ -12,9 +12,13 @@
   font-family: 'Roboto';
   font-style: normal;
   letter-spacing: 0.03em;
-
-
   padding-left: 0;
+
+  @media screen and (max-width: $predesktop){
+text-align: center;
+  }
+    
+  
 &__li{
 @media screen and (min-widht: $desktop) {
     text-align: left;
@@ -26,10 +30,10 @@
 
  
 }
-.address__link{
+&__link{
   font-size: 14px;
   line-height: 1.17;
-  color: rgba(255, 255, 255, 0.6);
+  color:$wite-color;
   text-decoration: none;
   letter-spacing: 0.03em;
   font-family: 'Roboto';
