--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -11,36 +11,43 @@
 &__logo {
   margin-bottom: 20px;
   
-    text-align: center;
+  @media screen and (max-width: $predesktop) {
+      text-align: center;
+    }
   
  
 }
 &__list{
   display: flex;
- flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 60px;
 
-
+@media screen and (max-width: $pretablet){
+display: flex;
+  flex-direction: column;
+}
  
- @media screen and (min-width: $tablet) {
-  flex-direction: row;
+ @media screen and (min-width: $tablet) and (max-width: $predesktop) {
+  // flex-direction: row;
   flex-wrap: wrap;
   align-items: baseline;
-    // justify-content: space-between;
+  justify-content: space-around;
+   
  }
-
+@media screen and (min-width: $predesktop){
+justify-content: space-between;
+}
   
-
+}
     
   &__li + &__li{
     @media screen and (max-width: $tablet) {
       margin-top: 60px;
     }
-        @media screen and (min-width: $tablet) {
-    margin-left: 70px; 
-}
+    //     @media screen and (min-width: $tablet) {
+    // margin-left: 70px; 
+// }
   }
 
 
@@ -48,8 +55,9 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+
 }
 
 }
   
-}
+
