--- a/scss/layout/_portfolio-card.scss
+++ b/scss/layout/_portfolio-card.scss
@@ -5,7 +5,7 @@
     // width: 370px;
     background: $wite-color;
     transition: box-shadow $time $time-function;
-    
+   
   
    &__thumb{
     position: relative;
@@ -36,9 +36,9 @@
   transform: translateY(100%);
   transition: opacity $time $time-function,
   transform $time $time-function ;
-  @media screen and (min-width: $tablet) and (max-width: $predesktop) {
-    font-size: 17.5px;
-  }
+  // @media screen and (min-width: $tablet) and (max-width: $predesktop) {
+  //   font-size: 17.5px;
+  // }
   } 
 
  &:hover, &:focus {
@@ -50,7 +50,8 @@
     opacity: 1;
   }
   &__field {
-    padding: 20px 24px;
+    // padding: 20px 24px;
+    padding: 18px 18px;
   }
   &__client {
     margin-bottom: 4px;
